2018-10-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Clean up code, more comments. Mostly revert
	the change on 2018-10-06, "Change option handling for
	future extensions" and change EXE2INDEP -> EXE2MODIFY.
	Make sure outfile string is non-empty.
	* dvispc.test: Test pipe input/output.
	* chkdvifont.man, dvispc.man: More info.

2018-10-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Checksum should be read as unsigned.
	Exit code 0 when called without argument and input M.
	* chkdvifont.test, dvispc.test: Test compatibility with
	old version.
	* tests/oldindep.{tex,dvi}, tests/oldindepout.dvi,
	tests/jis.{tfm,cfn}, tests/eufm10.{tfm,cfn}
	tests/cmr10.{pk,cfn}, tests/upjisr-h.{vf,cfn}: New tests.
	* Makefile.am: Adjusted.

2018-10-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Change option handling for future extensions.
	Make sure binary with trace does not fail tests by
	prioritizing infile and outfile as explicit arguments.
	* chkdvifont.test, dvispc.test: More tests stdin/stdout.
	* chkdvifont.man, dvispc.man: New man pages.
	* Makefile.am: Adjusted.
	* configure.ac: Version 20181006.

2018-10-05  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Exit code 0 when called without argument.

2018-10-04  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Fix a bug that -b option does not work. Make
	sure that -v option is not ignored for default -c mode.
	Remove unused code.

2018-09-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.{am,in}, propw.c, propw-ja.txt, propw.test,
	tests/jistest.pl: Removed propw from this bundle.

2018-09-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Renamed from chkfont.c.
	* chkdvifont-ja.txt: Renamed from chkfont.txt, updated.
	* chkdvifont.test: Renamed from chkfont.test, adapted.
	* dvispc-ja.txt: Renamed from dvispc.txt, updated.
	* dvispc-en.txt: Renamed from dvispce.txt, updated.